# inventree-inventory-platform

./: .gitattributes  .gitignore  AGENTS.md  ARTIFACTS.md  CONTRIBUTING.md  README.md  inventree-inventory-platform.code-workspace  justfile
.agents/: README.md  extensions.instructions.md  plugin.instructions.md  scripts.instructions.md
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: integration-tests.yml
chrome-multi-site-inventree-export/: README.md  background.js  manifest.json  package.json  playwright.config.js  popup.html  popup.js
chrome-multi-site-inventree-export/tests/: extension.integration.spec.js
extensions/chrome-multi-site-inventree-export/: README.md  background.js  manifest.json  package-lock.json  package.json  playwright.config.js  popup.html  popup.js
extensions/chrome-svg-capture-extension/: README.md  background.js  manifest.json  popup.html  popup.js
inventree-multi-site-importer/: README.md  pyproject.toml
inventree-multi-site-importer/inventree_multi_site_importer/: apps.py  core.py  inspection.py  models.py  planning.py  serializers.py  urls.py  views.py
inventree-multi-site-importer/inventree_multi_site_importer/migrations/: 0002_capture_profiles.py
inventree-multi-site-importer/inventree_multi_site_importer/templates/inventree_multi_site_importer/: capture_workspace.html
inventree-multi-site-importer/scripts/: build_plugin.py
inventree-multi-site-importer/tests/: test_plugin_loading.py
scripts/: check_secrets.py
(+19 files in other folders)
